[package]
name = "app"
version = "1.0.0"
description = ""
authors = ["Progre"]
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
env_logger = "0.9"
futures = "0.3"
getset = "0.1"
log = "0.4"
nipper = "0.1"
once_cell = "1.9"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde-xml-rs = "0.5"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tauri = { version = "1.0.0-rc.6", features = ["dialog-confirm", "dialog-open", "notification-all", "shell-open", "window-close"] }
tokio = { version = "1.17", features = ["macros", "net", "rt", "sync"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
