[package]
name = "app"
version = "1.0.0"
description = ""
authors = ["Progre"]
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.61"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
actix-web = "4.4"
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
deser-hjson = "2.2"
encoding_rs = "0.8"
env_logger = "0.11"
futures = "0.3"
getset = "0.1"
http = "*"
log = "0.4"
native-dialog = "0.7"
nipper = "0.1"
once_cell = "1.9"
regex = "1.5"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24"
serde_json = "1.0"
serde-xml-rs = "0.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tauri = { version = "1.0", features = [
    "dialog-confirm",
    "dialog-open",
    "notification-all",
    "os-all",
    "shell-open",
    "window-close"
] }
tauri-runtime = "*"
tokio = { version = "1.19", features = ["macros", "net", "rt", "sync"] }
tokio-stream = "0.1"
versions = "6.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
