[package]
name = "app"
version = "1.0.0"
description = ""
authors = ["Progre"]
repository = ""
default-run = "app"
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
actix-web = "4.4"
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
deser-hjson = "2.2"
encoding_rs = "0.8"
env_logger = "0.11"
futures = "0.3"
getset = "0.1"
http = "*"
log = "0.4"
native-dialog = "0.7"
nipper = "0.1"
once_cell = "1.9"
regex = "1.5"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24"
serde_json = "1.0"
serde-xml-rs = "0.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-runtime = "2"
tokio = { version = "1.19", features = ["macros", "net", "rt", "sync"] }
tokio-stream = "0.1"
versions = "6.2"
